--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -724,6 +724,7 @@ footer.sticky-bottom {
   border-radius: 8px;
   box-shadow: 0 0 16px #333;
   transition: all 1.5s ease;
+  opacity: 0;
 }
 
 .gallery img:hover {
