--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -698,8 +698,7 @@ footer.sticky-bottom {
   left: 50%;
   transform: translate3d(0, 0, 0);
   animation: zoomin 1s ease;
-  max-width: 100%;
-  max-height: 100%;
+  max-height: 70vh;
   margin: auto;
 }
 
